sfdx-source/force-app/main/default/objects/Product2/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>LEM-15266: It shows the account type of account on which product is added.</description>
    <formula>IF(
  OR(
    CONTAINS(TEXT(Family), $Label.ProductFamilyAsMarketplacePromotion),
    CONTAINS(TEXT(Family), $Label.ProductFamilyAsAdvertisement)
  ),
  $Label.Ads_Promos,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>