sfdx-source/force-app/main/default/objects/Product2/fields/Alcohol_Product__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to flag if the product is Alcohol Product or not</description>
    <label>Alcohol Product</label>
    <type>Checkbox</type>
</CustomField>