sfdx-source/force-app/main/default/objects/Product2/fields/Applicable_Countries__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Countries__c</fullName>
    <description>LEM-14501: It is used to capture the applicable country code(s) for products.</description>
    <label>Applicable Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryCode</valueSetName>
    </valueSet>
</CustomField>