sfdx-source/force-app/main/default/objects/Product2/fields/Applicable_Segment__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Segment__c</fullName>
    <description>LEM-13394: It is used to store applicable account segment values to filter out products on Quote Line Editor.</description>
    <label>Applicable Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>