sfdx-source/force-app/main/default/objects/Product2/fields/Approximate_Number_of_Photos__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Number_of_Photos__c</fullName>
    <description>LEM-13595: It is used to store the number of photos to be taken for every session.</description>
    <label>Approximate Number of Photos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>