sfdx-source/force-app/main/default/objects/Product2/fields/Backend_System__c.field-meta.xml
<CustomField>
    <fullName>Backend_System__c</fullName>
    <description>Description: LEM-2307: Summarize Business ID platforms on Order for Business creation and evaluation logic</description>
    <label>Backend System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>