sfdx-source/force-app/main/default/objects/Product2/fields/Brief_Routing__c.field-meta.xml
<CustomField>
    <fullName>Brief_Routing__c</fullName>
    <description>LEM-12423: Eliminate Need for Sales to Select Configuration Type</description>
    <label>Brief Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brief_Routing</valueSetName>
    </valueSet>
</CustomField>