sfdx-source/force-app/main/default/objects/Product2/fields/Campaign_Product__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-625: This field is define the custom lookup relationship between Product and Campaign Product object.</description>
    <label>Campaign Product</label>
    <referenceTo>Campaign_Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>