sfdx-source/force-app/main/default/objects/Product2/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>LEM-14053: It is used to store the Country.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
                <label>ALL (AUS, CAN, NZ, US)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>