sfdx-source/force-app/main/default/objects/Product2/fields/Display_on_Nintex_Form__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Nintex_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2018: Create New fields for Nintex processes. This field is to control if the product needs to be shown on the Nintex form .</description>
    <label>Display on Nintex Form</label>
    <type>Checkbox</type>
</CustomField>