sfdx-source/force-app/main/default/objects/Product2/fields/Fulfillment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method__c</fullName>
    <description>LEM-174 - Identifies if a bundle or option product is fulfilled by DoorDash, Self-Delivery, or Flexible Fulfillment.</description>
    <label>Fulfillment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fulfillment_Method</valueSetName>
    </valueSet>
</CustomField>