sfdx-source/force-app/main/default/objects/Product2/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <description>LEM-174 - Identifies if an option product is fulfilled by delivery or pickup. This field is not relevant to all products.</description>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fulfillment_Type</valueSetName>
    </valueSet>
</CustomField>