sfdx-source/force-app/main/default/objects/Product2/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>LEM-14053: It is used to store the language preference of the product bundle.</description>
    <label>Language</label>
    <length>180</length>
    <type>Text</type>
</CustomField>