sfdx-source/force-app/main/default/objects/Product2/fields/Package_Eligible_For_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Package_Eligible_For_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10841 CCP- Used to identify if a package is available for selection/ deselection in manage stores</description>
    <label>Package Eligible For Entitlement</label>
    <type>Checkbox</type>
</CustomField>