sfdx-source/force-app/main/default/objects/Product2/fields/Package_Eligible_For_Nintex_Options__c.field-meta.xml
<CustomField>
    <fullName>Package_Eligible_For_Nintex_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13995 Enable Sales Users to choose whether Fz stores get onboarded to SF</description>
    <label>Package Eligible For Nintex</label>
    <type>Checkbox</type>
</CustomField>