sfdx-source/force-app/main/default/objects/Product2/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>LEM-174 - Identifies the product as paid by “Merchant” or “Consumer”.</description>
    <label>Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payer</valueSetName>
    </valueSet>
</CustomField>