sfdx-source/force-app/main/default/objects/Product2/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>LEM-174 - Identifies if the bundle product is related to the DoorDash, Storefront, or Caviar platform.</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform</valueSetName>
    </valueSet>
</CustomField>