sfdx-source/force-app/main/default/objects/Product2/fields/Product_Selection_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection_Category__c</fullName>
    <description>LEM-1063: Product Selection screen updates</description>
    <label>Product Selection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
                <label>Marketing Promotions</label>
            </value>
            <value>
                <fullName>Advertisements</fullName>
            </value>
            <value>
                <fullName>Marketing Commitment</fullName>
            </value>
            <value>
                <fullName>Voice Ordering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>