sfdx-source/force-app/main/default/objects/Product2/fields/Product_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Visibility__c</fullName>
    <description>Description: LEM-936: Product Visibility. LEM-9455: Updated the formula to include ads and promo check</description>
    <formula>IF(TEXT(Product_Selection_Category__c)= &apos;Marketing Commitment&apos;,
        &apos;Ads and Promos; Other&apos;,

        IF(AND(TEXT(Product_Selection_Category__c)= &apos;Promotions&apos;, TEXT(Family)= &apos;Drive Promotion&apos;),

        &apos;Ads and Promos; Other&apos;,

        IF(AND(TEXT(Product_Selection_Category__c)= &apos;Promotions&apos;, TEXT(Family) != &apos;Drive Promotion&apos;),

        &apos;Ads and Promos; Only&apos;,

        IF(TEXT(Product_Selection_Category__c)= &apos;Advertisements&apos;, &apos;Ads and Promos; Only&apos;,

        &apos;Other&apos;))))</formula>
    <label>Product Visibility</label>
    <type>Text</type>
</CustomField>