sfdx-source/force-app/main/default/objects/Product2/fields/SSMO_Eligible__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16434: Identifies whether this product is supported in SSMO</description>
    <inlineHelpText>This box will be set to true if the product is eligible to be sent to SSMO/RESSMO.</inlineHelpText>
    <label>SSMO Eligible</label>
    <type>Checkbox</type>
</CustomField>