sfdx-source/force-app/main/default/objects/Product2/fields/Supports_Drive_Auto_Activation__c.field-meta.xml
<CustomField>
    <fullName>Supports_Drive_Auto_Activation__c</fullName>
    <description>LEM-2610: Identify if a Drive Products on a Contract are eligible to be auto-activated</description>
    <inlineHelpText>Indicates if the product supports auto-activation</inlineHelpText>
    <label>Supports Drive Auto-Activation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>