sfdx-source/force-app/main/default/objects/Product2/fields/Visible_To__c.field-meta.xml
<CustomField>
    <fullName>Visible_To__c</fullName>
    <description>LEM-174 - Used to control the visibility of a bundle product. Bundle products and their options are only visible to certain groups of users.</description>
    <label>Visible To</label>
    <length>70</length>
    <type>Text</type>
</CustomField>