sfdx-source/force-app/main/default/objects/Product2/fields/Work_Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Sub_Type__c</fullName>
    <description>LEM-2195: Product2 fields for Product to Work Order Type Mapping</description>
    <label>Work Order Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ads and Promo - Activate</fullName>
            </value>
            <value>
                <fullName>SaaS Fee Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>