sfdx-source/force-app/main/default/objects/Product2/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>LEM-2195: Product2 fields for Product to Work Order Type Mapping</description>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Post-Sales</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>